# gtop

./: LICENSE  README.md  pyproject.toml
gtop/: __init__.py  accounting.py  cli.py  collector.py  command_options.py  constants.py  constraints.py  models.py  partitions.py  render.py  resources.py  runner.py  slurm.py
tests/: README.md  conftest.py  gtop-output-g2.txt  gtop-output.txt  run_tests.py  sinfo-output-g2.txt  sinfo-output-unicorn.txt  sinfo-output.txt  test_cli.py  test_disp_shard.py  test_gpu_parsing.py  test_integration.py
