[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gtop"
version = "0.1.0"
authors = [
  { name="Shamus Li", email="shamus@cs.cornell.edu" },
]
description = "A tool to display SLURM cluster usage with detailed node and resource information."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License", # Choose a license
    "Operating System :: OS Independent",
]
# Add your python script's dependencies here
dependencies = [
    "rich",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "ty>=0.0.2",
    "vulture",
]

[project.scripts]
gtop = "gtop:main"
